TOC L3 hc his finished

--- a/hc/TOC-L3-hc.html
+++ b/hc/TOC-L3-hc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <title>TOC: Health Care</title>
+    <title>TOC L3: Health Care</title>
     <style>
         th, td {
             padding-left: 1em;
@@ -1551,7 +1551,60 @@
     <td></td>
     <td></td>
     <td>
-        <ruby><rt></rt></ruby>
+        6.1.1.
+        <ruby>臨床<rt>りんしょう</rt></ruby>
+        <ruby>検査<rt>けんさ</rt></ruby>の
+        <ruby>概要<rt>がいよう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        6.1.2.
+        <ruby>検体<rt>けんたい</rt></ruby>
+        <ruby>検査<rt>けんさ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        6.1.3.
+        <ruby>生理<rt>せいり</rt></ruby>
+        <ruby>機能<rt>きのう</rt></ruby>
+        <ruby>検査<rt>けんさ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        6.1.4.
+        <ruby>病理<rt>びょうり</rt></ruby>
+        <ruby>検査<rt>けんさ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        6.1.5.
+        <ruby>各科<rt>かくか</rt></ruby>
+        <ruby>固有<rt>こゆう</rt></ruby>の
+        <ruby>検査<rt>けんさ</rt></ruby>
     </td>
     <td></td>
     <td></td>
@@ -1566,6 +1619,115 @@
     </td>
     <td></td>
     <td colspan="2"></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        6.2.1.
+        <ruby>画像<rt>がぞう</rt></ruby>
+        <ruby>診断<rt>しんだん</rt></ruby>の
+        <ruby>概要<rt>がいよう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        6.2.2.
+        <ruby>単純<rt>たんじゅん</rt></ruby>
+        <ruby>撮影<rt>さつえい</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        6.2.3.
+        <ruby>造影<rt>ぞうえい</rt></ruby>
+        <ruby>検査<rt>けんさ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        6.2.4.
+        IVR (Interventional Radiology)
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        6.2.5.
+        CT
+        <ruby>検査<rt>けんさ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        6.2.6.
+        MRI
+        <ruby>検査<rt>けんさ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        6.2.7.
+        <ruby>核<rt>かく</rt></ruby>
+        <ruby>医学<rt>いがく</rt></ruby>
+        <ruby>検査<rt>けんさ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        6.2.8.
+        <ruby>超音波<rt>ちょうおんぱ</rt></ruby>
+        <ruby>検査<rt>けんさ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        6.2.9.
+        <ruby>内視鏡<rt>ないしきょう</rt></ruby>
+        <ruby>検査<rt>けんさ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
 </tr>
 <tr>
     <td colspan="3">
@@ -1585,6 +1747,105 @@
     </td>
     <td></td>
     <td colspan="2"></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        7.1.1.
+        <ruby>治療<rt>ちりょう</rt></ruby>
+        <ruby>法<rt>ほう</rt></ruby>の
+        <ruby>種類<rt>しゅるい</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        7.1.2.
+        <ruby>手術<rt>しゅじゅつ</rt></ruby>
+        (ロボット
+        <ruby>手術<rt>しゅじゅつ</rt></ruby>を
+        <ruby>含<rt>ふく</rt></ruby>む)
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        7.1.3.
+        <ruby>処置<rt>しょち</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        7.1.4.
+        <ruby>薬物<rt>やくぶつ</rt></ruby>
+        <ruby>治療<rt>ちりょう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        7.1.5.
+        リハビリテーション
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        7.1.6.
+        <ruby>精神<rt>せいしん</rt></ruby>
+        <ruby>専門<rt>せんもん</rt></ruby>
+        <ruby>治療<rt>ちりょう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        7.1.7.
+        <ruby>放射線<rt>ほうしゃせん</rt></ruby>
+        <ruby>治療<rt>ちりょう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        7.1.8.
+        その<ruby>他<rt>た</rt></ruby>の
+        <ruby>治療<rt>ちりょう</rt></ruby>・
+        <ruby>処置<rt>しょち</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
 </tr>
 <tr>
     <td colspan="3">
@@ -1612,6 +1873,90 @@
 </tr>
 <tr>
     <td></td>
+    <td></td>
+    <td>
+        8.1.1.
+        <ruby>医療<rt>いりょう</rt></ruby>
+        <ruby>記録<rt>きろく</rt></ruby>の
+        <ruby>目的<rt>もくてき</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.1.2.
+        <ruby>医療<rt>いりょう</rt></ruby>
+        <ruby>記録<rt>きろく</rt></ruby>に
+        <ruby>関<rt>かん</rt></ruby>する
+        <ruby>定義<rt>ていぎ</rt></ruby>と
+        <ruby>法令<rt>ほうれい</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.1.3.
+        <ruby>医療<rt>いりょう</rt></ruby>
+        <ruby>記録<rt>きろく</rt></ruby>の
+        <ruby>体系<rt>たいけい</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.1.4.
+        <ruby>医療<rt>いりょう</rt></ruby>
+        <ruby>記録<rt>きろく</rt></ruby>の
+        <ruby>医療<rt>いりょう</rt></ruby>
+        <ruby>安全<rt>あんぜん</rt></ruby>と
+        <ruby>継続<rt>けいぞく</rt></ruby>
+        <ruby>性<rt>せい</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        6.1.5.
+        <ruby>診療<rt>しんりょう</rt></ruby>
+        <ruby>関<rt>かか</rt></ruby>わる
+        <ruby>情報<rt>じょうほう</rt></ruby>の
+        <ruby>提供<rt>ていきょう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        6.1.6.
+        <ruby>医療<rt>いりょう</rt></ruby>
+        <ruby>記録<rt>きろく</rt></ruby>の
+        <ruby>監査<rt>かんさ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
     <td colspan="2">
         8.2.
         <ruby>医療<rt>いりょう</rt></ruby>
@@ -1622,6 +1967,250 @@
     </td>
     <td></td>
     <td colspan="2"></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.1.
+        <ruby>問題<rt>もんだい</rt></ruby>
+        <ruby>志向<rt>しこう</rt></ruby>
+        <ruby>型<rt>がた</rt></ruby>
+        <ruby>診療<rt>しんりょう</rt></ruby>
+        <ruby>記録<rt>きろく</rt></ruby>
+        (POMR)
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.2.
+        <ruby>患者<rt>かんじゃ</rt></ruby>
+        <ruby>基本<rt>きほん</rt></ruby>
+        <ruby>情報<rt>じょうほう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.3.
+        <ruby>初期<rt>しょき</rt></ruby>
+        <ruby>記録<rt>きろく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.4.
+        <ruby>経過<rt>けいか</rt></ruby>
+        <ruby>記録<rt>きろく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.5.
+        <ruby>説明<rt>せつめい</rt></ruby>と
+        <ruby>同意書<rt>どういしょ</rt></ruby>
+        <ruby>等<rt>とう</rt></ruby>、
+        <ruby>患者<rt>かんじゃ</rt></ruby>の
+        <ruby>意思<rt>いし</rt></ruby>
+        <ruby>決定<rt>けってい</rt></ruby>の
+        <ruby>書類<rt>しょるい</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.6.
+        <ruby>医師<rt>いし</rt></ruby>の
+        <ruby>指示<rt>しじ</rt></ruby>・
+        <ruby>依頼<rt>いらい</rt></ruby>
+        <ruby>記録<rt>きろく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.7.
+        <ruby>手術<rt>しゅじゅつ</rt></ruby>・
+        <ruby>麻酔<rt>ますい</rt></ruby>
+        <ruby>時<rt>じ</rt></ruby>
+        <ruby>記録<rt>きろく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.8.
+        <ruby>検査<rt>けんさ</rt></ruby>
+        <ruby>記録<rt>きろく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.9.
+        <ruby>他<rt>た</rt></ruby>
+        <ruby>科<rt>か</rt></ruby>・
+        <ruby>他<rt>た</rt></ruby>
+        <ruby>施設<rt>しせつ</rt></ruby>
+        <ruby>受診<rt>じゅしん</rt></ruby>
+        <ruby>依頼<rt>いらい</rt></ruby>
+        <ruby>記録<rt>きろく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.10.
+        サマリー
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.11.
+        <ruby>看護<rt>かんご</rt></ruby>に
+        <ruby>関<rt>かん</rt></ruby>する
+        <ruby>記録<rt>きろく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.12.
+        <ruby>薬剤師<rt>やくざいし</rt></ruby>が
+        <ruby>記載<rt>きさい</rt></ruby>すべき
+        <ruby>医療<rt>いりょう</rt></ruby>
+        <ruby>記録<rt>きろく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.13.
+        リハビリテーション
+        <ruby>記録<rt>きろく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.14.
+        <ruby>栄養<rt>えいよう</rt></ruby>
+        <ruby>食事<rt>しょくじ</rt></ruby>
+        <ruby>指導<rt>しどう</rt></ruby>
+        <ruby>記録<rt>きろく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.15.
+        クリニカルパス
+        <ruby>記録<rt>きろく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.16.
+        チーム
+        <ruby>医療<rt>いりょう</rt></ruby>に
+        <ruby>必要<rt>ひつよう</rt></ruby>な
+        <ruby>記録<rt>きろく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.17.
+        <ruby>医療<rt>いりょう</rt></ruby>
+        <ruby>福祉<rt>ふくし</rt></ruby>
+        <ruby>相談<rt>そうだん</rt></ruby>
+        <ruby>記録<rt>きろく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.2.18.
+        <ruby>入退院<rt>にゅうたいいん</rt></ruby>
+        <ruby>支援<rt>しえん</rt></ruby>
+        <ruby>記録<rt>きろく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
 </tr>
 <tr>
     <td></td>
@@ -1637,15 +2226,79 @@
 </tr>
 <tr>
     <td></td>
+    <td></td>
+    <td>
+        8.3.1.
+        その<ruby>他<rt>た</rt></ruby>の
+        <ruby>健康<rt>けんこう</rt></ruby>
+        <ruby>記録<rt>きろく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
     <td colspan="2">
         8.4.
         <ruby>医療<rt>いりょう</rt></ruby>
         <ruby>記録<rt>きろく</rt></ruby>の
-        <ruby>標準<rt>ひょうじゅん</rt></ruby>
-        コード
+        <ruby>標準<rt>ひょうじゅん</rt></ruby>コード
     </td>
     <td></td>
     <td colspan="2"></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.4.1.
+        <ruby>医療<rt>いりょう</rt></ruby>
+        <ruby>標準<rt>ひょうじゅん</rt></ruby>コードの
+        <ruby>必要性<rt>ひつようせい</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.4.2.
+        <ruby>傷病<rt>しょうびょう</rt></ruby>
+        <ruby>名<rt>めい</rt></ruby>の
+        <ruby>標準<rt>ひょうじゅん</rt></ruby>コード
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.4.3.
+        <ruby>手術<rt>しゅじゅつ</rt></ruby>
+        <ruby>処置<rt>しょち</rt></ruby>の
+        <ruby>標準<rt>ひょうじゅん</rt></ruby>コード
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        8.4.4.
+        その<ruby>他<rt>た</rt></ruby>の
+        <ruby>医療<rt>いりょう</rt></ruby>
+        <ruby>関係<rt>かんけい</rt></ruby>コード
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
 </tr>
 <tr>
     <td colspan="3">
@@ -1669,6 +2322,47 @@
 </tr>
 <tr>
     <td></td>
+    <td></td>
+    <td>
+        9.1.1.
+        <ruby>研究<rt>けんきゅう</rt></ruby>
+        <ruby>指針<rt>ししん</rt></ruby>と
+        <ruby>倫理<rt>りんり</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        9.1.2.
+        <ruby>研究<rt>けんきゅう</rt></ruby>
+        デザイン
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        9.1.3.
+        <ruby>疫学<rt>えきがく</rt></ruby>
+        <ruby>研究<rt>けんきゅう</rt></ruby>における
+        <ruby>基本的<rt>きほんてき</rt></ruby>
+        <ruby>指標<rt>しひょう</rt></ruby>と
+        <ruby>影響<rt>えいきょう</rt></ruby>
+        <ruby>要因<rt>よういん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
     <td colspan="2">
         9.2.
         <ruby>医学<rt>いがく</rt></ruby>
@@ -1677,6 +2371,40 @@
     </td>
     <td></td>
     <td colspan="2"></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        9.2.1.
+        エビデンス
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        9.2.2.
+        <ruby>臨床<rt>りんしょう</rt></ruby>
+        <ruby>研究<rt>けんきゅう</rt></ruby>の
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        9.2.3.
+        <ruby>治験<rt>ちけん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
 </tr>
 <tr>
     <td colspan="3">
@@ -1701,6 +2429,57 @@
 </tr>
 <tr>
     <td></td>
+    <td></td>
+    <td>
+        10.1.1.
+        <ruby>統計学<rt>とうけいがく</rt></ruby>の
+        <ruby>枠組<rt>わくぐ</rt></ruby>み
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        10.1.2.
+        <ruby>変量<rt>へんりょう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        10.1.3.
+        <ruby>標本<rt>ひょうほん</rt></ruby>の
+        <ruby>収集<rt>しゅうしゅう</rt></ruby>と
+        <ruby>記述<rt>きじゅつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        10.1.4.
+        <ruby>母集団<rt>ぼしゅうだん</rt></ruby>の
+        <ruby>分布<rt>ぶんぷ</rt></ruby>と
+        <ruby>代表的<rt>だいひょうてき</rt></ruby>な
+        <ruby>確率<rt>かくりつ</rt></ruby>
+        <ruby>分布<rt>ぶんぷ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
     <td colspan="2">
         10.2.
         <ruby>推定<rt>すいてい</rt></ruby>と
@@ -1711,6 +2490,60 @@
 </tr>
 <tr>
     <td></td>
+    <td></td>
+    <td>
+        10.2.1.
+        <ruby>正規<rt>せいき</rt></ruby>
+        <ruby>分布<rt>ぶんぷ</rt></ruby>に
+        <ruby>基<rt>もと</rt></ruby>づく
+        <ruby>推定<rt>すいてい</rt></ruby>と
+        <ruby>検定<rt>けんてい</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        10.2.2.
+        ノンパラメトリックな
+        <ruby>方法<rt>ほうほう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        10.2.3.
+        <ruby>回帰<rt>かいき</rt></ruby>
+        モデル
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        10.2.4.
+        <ruby>多<rt>た</rt></ruby>
+        <ruby>変量<rt>へんりょう</rt></ruby>
+        <ruby>解析<rt>かいせつ</rt></ruby>の
+        <ruby>基本<rt>きほん</rt></ruby>
+        <ruby>概念<rt>がいねん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
     <td colspan="2">
         10.3.
         <ruby>統計<rt>とうけい</rt></ruby>の
@@ -1718,6 +2551,31 @@
     </td>
     <td></td>
     <td colspan="2"></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        10.3.1.
+        <ruby>統計<rt>とうけい</rt></ruby>
+        <ruby>表<rt>ひょう</rt></ruby>の
+        <ruby>表現<rt>ひょうげん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        10.3.2.
+        グラフの
+        <ruby>表現<rt>ひょうげん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
 </tr>
 <tr>
     <td colspan="3">
@@ -1737,6 +2595,68 @@
     </td>
     <td></td>
     <td colspan="2"></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        11.1.1.
+        DPC
+        <ruby>調査<rt>ちょうさ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        11.1.2.
+        NDB
+        (ナショナルデータベース)
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        11.1.3.
+        NCD
+        (ナショナルテクニカルデータベース)
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        11.1.4.
+        がん
+        <ruby>登録<rt>とうろく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        11.1.5.
+        その<ruby>他<rt>た</rt></ruby>の
+        <ruby>臨床<rt>りんしょう</rt></ruby>
+        データ
+        <ruby>収集<rt>しゅうしゅう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
 </tr>
 </table>
 
