--- a/hc/TOC-L3-hc.html
+++ b/hc/TOC-L3-hc.html
@@ -913,7 +913,7 @@
     <td></td>
     <td>
         4.1.1.
-        <ruby>診療<rt>しんりょう</rt></ruby>
+        <ruby>診断<rt>しんだん</rt></ruby>
         <ruby>過程<rt>かてい</rt></ruby>の
         <ruby>概要<rt>がいよう</rt></ruby>
     </td>
@@ -1036,7 +1036,7 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>The body structure from the clinical standpoint</td>
 </tr>
 <tr>
     <td></td>
@@ -1071,7 +1071,8 @@
     <td></td>
     <td>
         5.1.4.
-        <ruby>循環器<rt>じゅんかんき</rt></ruby>
+        <ruby>循環<rt>じゅんかん</rt></ruby>
+        <ruby>器<rt>き</rt></ruby>
         <ruby>系<rt>けい</rt></ruby>の
         <ruby>機能<rt>きのう</rt></ruby>と
         <ruby>疾患<rt>しっかん</rt></ruby>
@@ -1085,7 +1086,8 @@
     <td></td>
     <td>
         5.1.5.
-        <ruby>呼吸器<rt>こきゅうき</rt></ruby>
+        <ruby>呼吸<rt>こきゅう</rt></ruby>
+        <ruby>器<rt>き</rt></ruby>
         <ruby>系<rt>けい</rt></ruby>の
         <ruby>機能<rt>きのう</rt></ruby>と
         <ruby>疾患<rt>しっかん</rt></ruby>
@@ -1099,7 +1101,8 @@
     <td></td>
     <td>
         5.1.6.
-        <ruby>消化器<rt>しょうかき</rt></ruby>
+        <ruby>消化<rt>しょうか</rt></ruby>
+        <ruby>器<rt>き</rt></ruby>
         <ruby>系<rt>けい</rt></ruby>の
         <ruby>機能<rt>きのう</rt></ruby>と
         <ruby>疾患<rt>しっかん</rt></ruby>
@@ -1114,7 +1117,8 @@
     <td>
         5.1.7.
         <ruby>代謝<rt>たいしゃ</rt></ruby>・
-        <ruby>内分泌<rt>ないぶんぴつ</rt></ruby>
+        <ruby>内<rt>ない</rt></ruby>
+        <ruby>分泌<rt>ぶんぴ</rt></ruby>
         <ruby>系<rt>けい</rt></ruby>の
         <ruby>機能<rt>きのう</rt></ruby>と
         <ruby>疾患<rt>しっかん</rt></ruby>
@@ -1202,7 +1206,8 @@
     <td>
         5.1.13.
         <ruby>眼<rt>め</rt></ruby>および
-        <ruby>付属器<rt>ふぞくき</rt></ruby>の
+        <ruby>付属<rt>ふぞく</rt></ruby>
+        <ruby>器<rt>き</rt></ruby>の
         <ruby>機能<rt>きのう</rt></ruby>と
         <ruby>疾患<rt>しっかん</rt></ruby>
     </td>
@@ -1216,7 +1221,8 @@
     <td>
         5.1.14.
         <ruby>腎<rt>じん</rt></ruby>・
-        <ruby>泌尿器<rt>ひにょうき</rt></ruby>
+        <ruby>泌尿<rt>ひにょう</rt></ruby>
+        <ruby>器<rt>き</rt></ruby>
         <ruby>系<rt>けい</rt></ruby>の
         <ruby>機能<rt>きのう</rt></ruby>と
         <ruby>疾患<rt>しっかん</rt></ruby>
@@ -1231,12 +1237,14 @@
     <td>
         5.1.15.
         <ruby>女性<rt>じょせい</rt></ruby>
-        <ruby>生殖器<rt>せいしょくき</rt></ruby>
+        <ruby>生殖<rt>せいしょく</rt></ruby>
+        <ruby>器<rt>き</rt></ruby>
         <ruby>系<rt>けい</rt></ruby>
         および
         <ruby>妊娠<rt>にんしん</rt></ruby>・
         <ruby>分娩<rt>ぶんべん</rt></ruby>・
-        <ruby>産褥期<rt>さんじょくき</rt></ruby>の
+        <ruby>産褥<rt>さんじょく</rt></ruby>
+        <ruby>期<rt>き</rt></ruby>の
         <ruby>疾患<rt>しっかん</rt></ruby>
     </td>
     <td></td>
@@ -1262,7 +1270,8 @@
         5.1.17.
         <ruby>新生児<rt>しんせいじ</rt></ruby>
         <ruby>疾患<rt>しっかん</rt></ruby>、
-        <ruby>先天性<rt>せんてんせい</rt></ruby>
+        <ruby>先天<rt>せんてん</rt></ruby>
+        <ruby>性<rt>せい</rt></ruby>
         <ruby>奇形<rt>きけい</rt></ruby>
     </td>
     <td></td>
@@ -2255,7 +2264,8 @@
         8.4.1.
         <ruby>医療<rt>いりょう</rt></ruby>
         <ruby>標準<rt>ひょうじゅん</rt></ruby>コードの
-        <ruby>必要性<rt>ひつようせい</rt></ruby>
+        <ruby>必要<rt>ひつよう</rt></ruby>
+        <ruby>性<rt>せい</rt></ruby>
     </td>
     <td></td>
     <td></td>
