--- a/hc/TOC-L3-hc.html
+++ b/hc/TOC-L3-hc.html
@@ -1942,7 +1942,7 @@
     <td></td>
     <td>
         6.1.5.
-        <ruby>診療<rt>しんりょう</rt></ruby>
+        <ruby>診療<rt>しんりょう</rt></ruby>に
         <ruby>関<rt>かか</rt></ruby>わる
         <ruby>情報<rt>じょうほう</rt></ruby>の
         <ruby>提供<rt>ていきょう</rt></ruby>
@@ -1975,7 +1975,9 @@
         (<ruby>書き方<rt>かきかた</rt></ruby>)
     </td>
     <td></td>
-    <td colspan="2"></td>
+    <td colspan="2">
+        Components of a health record (how to compose)
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -1987,11 +1989,12 @@
         <ruby>型<rt>がた</rt></ruby>
         <ruby>診療<rt>しんりょう</rt></ruby>
         <ruby>記録<rt>きろく</rt></ruby>
-        (POMR)
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Problem oriented medical records (POMR)
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2004,7 +2007,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Basic patient data
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2045,7 +2050,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Documents about patients' decision making such as consent forms
+    </td>
 </tr>
 <tr>
     <td></td>
