all chapters done

--- a/hc/TOC-L3-hc.html
+++ b/hc/TOC-L3-hc.html
@@ -2669,7 +2669,9 @@
         <ruby>医学<rt>いがく</rt></ruby>
         <ruby>研究<rt>けんきゅう</rt></ruby>
     </td>
-    <td colspan="3"></td>
+    <td colspan="3">
+        Clinical medicine research
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2680,7 +2682,9 @@
         <ruby>基礎<rt>きそ</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2"></td>
+    <td colspan="2">
+        Fundamentals of medical research
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2693,7 +2697,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Guiding principles and ththics of medical research
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2705,7 +2711,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Research design
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2721,7 +2729,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Basic indexes and affecting factors in epidemiological researches
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2732,7 +2742,9 @@
         <ruby>進め方<rt>すすめかた</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2"></td>
+    <td colspan="2">
+        How to conduct medical researches
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2743,7 +2755,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Evidences
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2755,7 +2769,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Clinical medicine researches
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2766,7 +2782,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Clinical trials
+    </td>
 </tr>
 <tr>
     <td colspan="3">
@@ -2775,7 +2793,9 @@
         <ruby>医療<rt>いりょう</rt></ruby>
         <ruby>統計<rt>とうけい</rt></ruby>
     </td>
-    <td colspan="3"></td>
+    <td colspan="3">
+        Statistics in medicine and medical care
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2787,7 +2807,9 @@
         <ruby>基礎<rt>きそ</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2"></td>
+    <td colspan="2">
+        Fundamentals for statistics in medicine and medical care
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2799,7 +2821,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        An outline of statistics
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2810,7 +2834,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Variates
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2823,7 +2849,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Collecting and describing samples
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2838,7 +2866,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Population, distribution, and typical probability distributions
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2848,7 +2878,9 @@
         <ruby>検定<rt>けんてい</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2"></td>
+    <td colspan="2">
+        Statistical inference and test
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2863,7 +2895,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Statistical inference and test based on the normal distribution
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2875,7 +2909,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Nonparametric statistics
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2887,7 +2923,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Regression models
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2902,7 +2940,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Basic concepts of Multivariate Analysis
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2912,7 +2952,9 @@
         <ruby>表現<rt>ひょうげん</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2"></td>
+    <td colspan="2">
+        Representation in statistics
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2925,7 +2967,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Tabular representations
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2937,7 +2981,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Graphical representations 
+    </td>
 </tr>
 <tr>
     <td colspan="3">
@@ -2945,7 +2991,9 @@
         <ruby>臨床<rt>りんしょう</rt></ruby>
         データベース
     </td>
-    <td colspan="3"></td>
+    <td colspan="3">
+        Clinical databasees
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2956,7 +3004,9 @@
         <ruby>実際<rt>じっさい</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2"></td>
+    <td colspan="2">
+        Actual clinical databases
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2968,7 +3018,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Diagnosis Procedure Combination (DPC) surveys
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2980,7 +3032,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        National Database (NDB)
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -2988,11 +3042,13 @@
     <td>
         11.1.3.
         NCD
-        (ナショナルテクニカルデータベース)
+        (ナショナルクリニカルデータベース)
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        National Clinical Database (NCD)
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -3004,7 +3060,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Cancer registration
+    </td>
 </tr>
 <tr>
     <td></td>
@@ -3018,7 +3076,9 @@
     </td>
     <td></td>
     <td></td>
-    <td></td>
+    <td>
+        Collecting other clinical data
+    </td>
 </tr>
 </table>
 
