--- a/hc/TOC-L3-hc.html
+++ b/hc/TOC-L3-hc.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <meta charset="UTF-8">
     <title>TOC L3: Health Care</title>
     <style>
         th, td {
@@ -611,7 +612,7 @@
     <td></td>
     <td></td>
     <td>
-        Orgnizational structures of a hospital
+        Organizational structures of a hospital
     </td>
 </tr>
 <tr>
@@ -952,7 +953,7 @@
     <td></td>
     <td></td>
     <td>
-        Collecting and leveraging case stduies about medical safety
+        Collecting and leveraging case studies about medical safety
     </td>
 </tr>
 <tr>
@@ -1053,7 +1054,7 @@
     <td></td>
     <td></td>
     <td>
-        Medical diganosis procedures — an overview
+        Medical diagnosis procedures — an overview
     </td>
 </tr>
 <tr>
@@ -1524,7 +1525,7 @@
     <td></td>
     <td></td>
     <td>
-        Posoning, burn, scald, injury, and trauma
+        Poisoning, burn, scald, injury, and trauma
     </td>
 </tr>
 <tr>
@@ -1859,7 +1860,7 @@
     <td></td>
     <td></td>
     <td>
-        Tests classified by speciality field
+        Tests classified by specialty field
     </td>
 </tr>
 <tr>
@@ -2123,7 +2124,7 @@
     <td></td>
     <td></td>
     <td>
-        Radiothrapies
+        Radiotherapies
     </td>
 </tr>
 <tr>
@@ -2388,7 +2389,7 @@
     <td></td>
     <td></td>
     <td>
-        Operative and anethetic records
+        Operative and anesthetic records
     </td>
 </tr>
 <tr>
@@ -2421,7 +2422,7 @@
     <td></td>
     <td></td>
     <td>
-        Inter-speciality referral records
+        Inter-specialty referral records
     </td>
 </tr>
 <tr>
@@ -2698,7 +2699,7 @@
     <td></td>
     <td></td>
     <td>
-        Guiding principles and ththics of medical research
+        Guiding principles and ethics of medical research
     </td>
 </tr>
 <tr>
@@ -2992,7 +2993,7 @@
         データベース
     </td>
     <td colspan="3">
-        Clinical databasees
+        Clinical databases
     </td>
 </tr>
 <tr>
