--- a/msd_body.html
+++ b/msd_body.html
@@ -30,7 +30,6 @@
     <th colspan="3">Body structure</th>
 </tr>
 <tr>
-    <td></td>
     <td colspan="3">
         <ruby>脳<rt>のう</rt></ruby>・
         <ruby>神経<rt>しんけい</rt></ruby>
@@ -40,7 +39,6 @@
     <td colspan="3">The brain and nervous system</td>
 </tr>
 <tr>
-    <td></td>
     <td colspan="3">
         <ruby>循環<rt>じゅんかん</rt></ruby>
         <ruby>器<rt>き</rt></ruby>
@@ -50,7 +48,6 @@
     <td colspan="3">The circulatory system</td>
 </tr>
 <tr>
-    <td></td>
     <td colspan="3">
         <ruby>呼吸<rt>こきゅう</rt></ruby>
         <ruby>器<rt>き</rt></ruby>
@@ -60,7 +57,6 @@
     <td colspan="3">The respiratory system</td>
 </tr>
 <tr>
-    <td></td>
     <td colspan="3">
         <ruby>消化<rt>しょうか</rt></ruby>
         <ruby>器<rt>き</rt></ruby>
@@ -70,7 +66,6 @@
     <td colspan="3">The digestive system</td>
 </tr>
 <tr>
-    <td></td>
     <td colspan="3">
         <ruby>代謝<rt>たいしゃ</rt></ruby>・
         <ruby>内<rt>ない</rt></ruby>
@@ -81,7 +76,6 @@
     <td colspan="3">The metabolic and endocrine system</td>
 </tr>
 <tr>
-    <td></td>
     <td colspan="3">
         <ruby>血液<rt>けつえき</rt></ruby>・
         <ruby>造血<rt>ぞうけつ</rt></ruby>
@@ -91,74 +85,81 @@
     <td colspan="3">Blood and hematopoietic tissue</td>
 </tr>
 <tr>
-    <td></td>
     <td colspan="3">
-        (5.1..)
+        <ruby>免疫<rt>めんえき</rt></ruby>
+        <ruby>系<rt>けい</rt></ruby>
+        (5.1.9.)
+    </td>
+    <td colspan="3">The immune system</td>
+</tr>
+<tr>
+    <td colspan="3">
+        <ruby>筋<rt>きん</rt></ruby>
+        <ruby>骨格<rt>こっかく</rt></ruby>
+        <ruby>系<rt>けい</rt></ruby>
+        (5.1.10.)
+    </td>
+    <td colspan="3">The musculoskeletal system</td>
+</tr>
+<tr>
+    <td colspan="3">
+        <ruby>皮膚<rt>ひふ</rt></ruby>
+        (5.1.11.)
+    </td>
+    <td colspan="3">The skin</td>
+</tr>
+<tr>
+    <td colspan="3">
+        <ruby>耳鼻<rt>じび</rt></ruby>
+        <ruby>咽喉<rt>いんこう</rt></ruby>
+        <ruby>系<rt>けい</rt></ruby>
+        (5.1.12.)
+    </td>
+    <td colspan="3">The otorhinolaryngologic system</td>
+</tr>
+<tr>
+    <td colspan="3">
+        <ruby>眼<rt>め</rt></ruby>および
+        <ruby>付属<rt>ふぞく</rt></ruby>
+        <ruby>器<rt>き</rt></ruby>
+        (5.1.13.)
+    </td>
+    <td colspan="3">The eye and adnexa</td>
+</tr>
+<tr>
+    <td colspan="3">
+        <ruby>腎<rt>じん</rt></ruby>・
+        <ruby>泌尿<rt>ひにょう</rt></ruby>
+        <ruby>器<rt>き</rt></ruby>
+        <ruby>系<rt>けい</rt></ruby>
+        (5.1.14.)
     </td>
     <td colspan="3"></td>
 </tr>
 <tr>
-    <td></td>
     <td colspan="3">
-        (5.1..)
+        <ruby>女性<rt>じょせい</rt></ruby>
+        <ruby>生殖<rt>せいしょく</rt></ruby>
+        <ruby>器<rt>き</rt></ruby>
+        <ruby>系<rt>けい</rt></ruby>
+        (5.1.15.)
     </td>
-    <td colspan="3"></td>
+    <td colspan="3">The female genital system</td>
 </tr>
 <tr>
-    <td></td>
     <td colspan="3">
-        (5.1..)
+        <ruby>乳房<rt>にゅうぼう</rt></ruby>
+        (5.1.16.)
     </td>
-    <td colspan="3"></td>
+    <td colspan="3">The breast</td>
 </tr>
 <tr>
-    <td></td>
     <td colspan="3">
-        (5.1..)
+        <ruby>口腔<rt>こうくう</rt></ruby>
+        <ruby>領域<rt>りょういき</rt></ruby>
+        (5.1.20.)
     </td>
-    <td colspan="3"></td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="3">
-        (5.1..)
-    </td>
-    <td colspan="3"></td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="3">
-        (5.1..)
-    </td>
-    <td colspan="3"></td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="3">
-        (5.1..)
-    </td>
-    <td colspan="3"></td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="3">
-        (5.1..)
-    </td>
-    <td colspan="3"></td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="3">
-        (5.1..)
-    </td>
-    <td colspan="3"></td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="3">
-        (5.1..)
-    </td>
-    <td colspan="3"></td>
+    <td colspan="3">The oral cavity region</td>
 </tr>
 </table>
 
