--- a/msd_body.html
+++ b/msd_body.html
@@ -29,6 +29,322 @@
     </th>
     <th colspan="3">Body structure</th>
 </tr>
+<!-------------------------------------------------------->
+<tr>
+    <td colspan="3">
+        はじめに
+    </td>
+    <td colspan="3">Introduction</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>生物<rt>せいぶつ</rt></ruby>
+        <ruby>学<rt>がく</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">biology /baɪˈɒl ə dʒi/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>生理<rt>せいり</rt></ruby>
+        <ruby>学<rt>がく</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">physiology /ˌfɪz iˈɒl ə dʒi/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>解剖<rt>かいぼう</rt></ruby>
+        <ruby>学<rt>がく</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">anatomy /əˈnæt ə mi/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">cell</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>卵子<rt>らんし</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>egg</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>精子<rt>せいし</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>sperm /spɜrm/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>受精<rt>じゅせい</rt></ruby>
+        <ruby>卵<rt>らん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>fertilized egg</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>血液<rt>けつえき</rt></ruby>
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>blood cell</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>筋肉<rt>きんにく</rt></ruby>
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>muscle cell</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>皮膚<rt>ひふ</rt></ruby>
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>skin cell</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>神経<rt>しんけい</rt></ruby>
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>nerve cell</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>線<rt>せん</rt></ruby>
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>glandular cell /ˈglæn dʒə lər/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>微<rt>び</rt></ruby>
+        <ruby>生物<rt>せいぶつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>microorganism</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>バクテリア</td>
+    <td></td>
+    <td></td>
+    <td>bacteria</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>菌<rt>きん</rt></ruby>
+        <ruby>類<rt>るい</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>fungus /ˈfʌŋ gəs/, fungi /ˈfʌn dʒaɪ/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>常在<rt>じょうざい</rt></ruby>
+        <ruby>菌<rt>きん</rt></ruby>
+        <ruby>叢<rt>そう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>resident flora</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>マイクロバイオーム</td>
+    <td></td>
+    <td></td>
+    <td>microbiome</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>ウィルス</td>
+    <td></td>
+    <td></td>
+    <td>virus /ˈvaɪ rəs/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+        <ruby>膜<rt>まく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>cell membrane</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>受容<rt>じゅよう</rt></ruby>
+        <ruby>体<rt>たい</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>receptor</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>インスリン</td>
+    <td></td>
+    <td></td>
+    <td>insulin /ˈɪn sə lɪn/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>グルコース</td>
+    <td></td>
+    <td></td>
+    <td>glucose /ˈglu koʊs/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>血糖<rt>けっとう</rt></ruby>
+        <ruby>値<rt>ち</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>blood sugar level</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+        <ruby>質<rt>しつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>cytoplasm /ˈsaɪ təˌplæz əm/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+        <ruby>核<rt>かく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>nucleus /ˈnu kli əs/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>遺伝<rt>いでん</rt></ruby>
+        <ruby>物質<rt>ぶっしつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>genetic material</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>遺伝<rt>いでん</rt></ruby>
+        <ruby>子<rt>し</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>gene /dʒin/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>染色<rt>せんしょく</rt></ruby>
+        <ruby>体<rt>たい</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>chromosome /ˈkroʊ məˌsoʊm/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>ミトコンドリア</td>
+    <td></td>
+    <td></td>
+    <td>mitochondria /ˌmaɪ təˈkɒn dri ə/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>リボソーム</td>
+    <td></td>
+    <td></td>
+    <td>ribosome /ˈraɪ bəˌsoʊm/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby><rt></rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2"></td>
+</tr>
+
+<!-------------------------------------------------------->
 <tr>
     <td colspan="3">
         <ruby>脳<rt>のう</rt></ruby>・
@@ -38,6 +354,8 @@
     </td>
     <td colspan="3">The brain and nervous system</td>
 </tr>
+
+<!-------------------------------------------------------->
 <tr>
     <td colspan="3">
         <ruby>循環<rt>じゅんかん</rt></ruby>
@@ -47,6 +365,8 @@
     </td>
     <td colspan="3">The circulatory system</td>
 </tr>
+
+<!-------------------------------------------------------->
 <tr>
     <td colspan="3">
         <ruby>呼吸<rt>こきゅう</rt></ruby>
@@ -56,6 +376,8 @@
     </td>
     <td colspan="3">The respiratory system</td>
 </tr>
+
+<!-------------------------------------------------------->
 <tr>
     <td colspan="3">
         <ruby>消化<rt>しょうか</rt></ruby>
@@ -65,6 +387,8 @@
     </td>
     <td colspan="3">The digestive system</td>
 </tr>
+
+<!-------------------------------------------------------->
 <tr>
     <td colspan="3">
         <ruby>代謝<rt>たいしゃ</rt></ruby>・
@@ -75,6 +399,8 @@
     </td>
     <td colspan="3">The metabolic and endocrine system</td>
 </tr>
+
+<!-------------------------------------------------------->
 <tr>
     <td colspan="3">
         <ruby>血液<rt>けつえき</rt></ruby>・
@@ -84,6 +410,8 @@
     </td>
     <td colspan="3">Blood and hematopoietic tissue</td>
 </tr>
+
+<!-------------------------------------------------------->
 <tr>
     <td colspan="3">
         <ruby>免疫<rt>めんえき</rt></ruby>
@@ -92,6 +420,8 @@
     </td>
     <td colspan="3">The immune system</td>
 </tr>
+
+<!-------------------------------------------------------->
 <tr>
     <td colspan="3">
         <ruby>筋<rt>きん</rt></ruby>
@@ -101,6 +431,8 @@
     </td>
     <td colspan="3">The musculoskeletal system</td>
 </tr>
+
+<!-------------------------------------------------------->
 <tr>
     <td colspan="3">
         <ruby>皮膚<rt>ひふ</rt></ruby>
@@ -108,6 +440,8 @@
     </td>
     <td colspan="3">The skin</td>
 </tr>
+
+<!-------------------------------------------------------->
 <tr>
     <td colspan="3">
         <ruby>耳鼻<rt>じび</rt></ruby>
@@ -117,6 +451,8 @@
     </td>
     <td colspan="3">The otorhinolaryngologic system</td>
 </tr>
+
+<!-------------------------------------------------------->
 <tr>
     <td colspan="3">
         <ruby>眼<rt>め</rt></ruby>および
@@ -126,6 +462,8 @@
     </td>
     <td colspan="3">The eye and adnexa</td>
 </tr>
+
+<!-------------------------------------------------------->
 <tr>
     <td colspan="3">
         <ruby>腎<rt>じん</rt></ruby>・
@@ -136,6 +474,8 @@
     </td>
     <td colspan="3"></td>
 </tr>
+
+<!-------------------------------------------------------->
 <tr>
     <td colspan="3">
         <ruby>女性<rt>じょせい</rt></ruby>
@@ -146,6 +486,8 @@
     </td>
     <td colspan="3">The female genital system</td>
 </tr>
+
+<!-------------------------------------------------------->
 <tr>
     <td colspan="3">
         <ruby>乳房<rt>にゅうぼう</rt></ruby>
@@ -153,6 +495,8 @@
     </td>
     <td colspan="3">The breast</td>
 </tr>
+
+<!-------------------------------------------------------->
 <tr>
     <td colspan="3">
         <ruby>口腔<rt>こうくう</rt></ruby>
@@ -161,6 +505,8 @@
     </td>
     <td colspan="3">The oral cavity region</td>
 </tr>
+
+<!-------------------------------------------------------->
 </table>
 
 </body>
